--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Alunos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="app/styles.css">
 </head>
 <body>
     <h1>Sistema de Alunos</h1>
@@ -19,6 +19,6 @@
         <button type="submit">Adicionar Aluno</button>
     </form>
     <ul id="student-list"></ul>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
